Fix z-index of navbar on toggle

--- a/src/components/header.css
+++ b/src/components/header.css
@@ -4,8 +4,10 @@
     z-index: -1;
     width: 100vw;
     background-color: black;
-    height: 100vh;
+    max-height: 100vh;
     display: flex;
+    flex-direction: row;
+    align-items: center;
     margin-bottom: 2rem;
 }
 
@@ -15,12 +17,10 @@
 }
 
 .main-title {
+    display: inline-block;
     position: absolute;
-    right: 15vw;
-    top: 30vh;
+    top: 20px;
     max-width: 25vw; 
-    max-height: 100vh;
-    z-index: 0;
 }
 
 .page-title {
