--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -6,6 +6,7 @@
   left: 0;
   margin: auto;
   width: 100%;
+  z-index: 2;
 }
 
   .top-navbar {
@@ -18,10 +19,11 @@
     justify-content: space-between;
     font-family: Poppins;
     font-weight: 500;
+    z-index: 2;
   }
   
   .header-logo-container {
-    height: 100%;
+    height: 100vh;
     width: 40px;
     max-width: 80%;
     max-height: 80%;
@@ -42,6 +44,8 @@
     background-color: #2b2c2f;
     width: 30vw;
     height: 100vh;
+    overflow: auto;
+    z-index: 2;
   }
   
   .top-navlinks-container > ul {
@@ -73,6 +77,5 @@
     height: 40px;
     width: auto;
     cursor: pointer;
-    z-index: 1;
+    z-index: 3;
   }
-  
